# IntroductionToAlgebraicEvaluation

./: .gitignore  AlgebraicEvaluation.py  ConfusionAroundTheDawidSkeneTask.md  EvaluationIdealAndVarietyErorrIndependentTrio.nb  EvaluationIdealAndVarietyErrorIndependentTrio.nb  README.md  SimplestExampleOfEvaluationWithAlgebraicGeometry.md  TheForgottenRadicalEmpiricismOfRegnault.md  TheTwitterLikesToViewsSocialThermometer.md
python/: ACKNOWLEDGEMENTS.md  CHANGELOG.md  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.md  pyproject.toml
python/docs/: .readthedocs.yaml  requirements.txt
python/docs/source/: conceptual.md  conf.py  evaluation_is_easier.md  formal_verification.md  index.md  modules.md  notebooks  ntqr.md  ntqr.r2.md
python/docs/source/_static/: custom.css
python/docs/source/_templates/autoapi/python/: module.rst
python/docs/source/notebooks/: AlgebraAndGeometryOfNTQR.ipynb  EvaluatingLLMsThatGradeOtherLLMs.ipynb  ExactAlgebraicSolutionErrorIndependent.ipynb  HowManyIndependentAxioms.ipynb  LogicOfUnsupervisedEvaluationTutorial.ipynb  LogicalAlarmsMisalignedClassifiers.ipynb  ProvingTheAxioms.ipynb  SolvingBoundedLinearDiophantineSystems.ipynb  Tutorial.ipynb
python/docs/source/ntqr/: ntqr.alarms.rst  ntqr.evaluations.rst  ntqr.plots.rst  ntqr.r2.datasketches.rst  ntqr.r2.evaluations.rst  ntqr.r2.evaluators.rst  ntqr.r2.examples.rst  ntqr.r2.paxioms.rst  ntqr.r2.plots.rst  ntqr.r2.raxioms.rst  ntqr.r2.rst  ntqr.r2.uci_adult_20240415.rst  ntqr.r3.evaluations.rst  ntqr.r3.raxioms.rst  ntqr.r3.rst  ntqr.rst  ntqr.statistics.rst
python/docs/source/research/: EvaluatingLLMsThatGradeOtherLLMs.ipynb  GradingLLMs.md  MathematicsOfAlgebraicEvaluation.md  ProvingTheAxioms.ipynb  TheScienceOfAlgebraicEvaluation.md
python/notebooks/: Tutorial.ipynb
python/ntqr/r2/evaluator/: errorindependent.py
python/src/ntqr/: __init__.py  alarms.py  algebra.py  evaluations.py  labels.py  plots.py  raxioms.py  statistics.py  testsketches.py
python/src/ntqr/notebooks/: AlgebraAndGeometryOfNTQR.ipynb  ExactAlgebraicSolutionErrorIndependent.ipynb  LogicOfUnsupervisedEvaluationTutorial.ipynb  LogicalAlarmsMisalignedClassifiers.ipynb  PossibleAndConsistentSet.ipynb  Tutorial.ipynb
python/src/ntqr/r2/: __init__.py  alarms.py  conditionals.py  datasketches.py  evaluations.py  evaluators.py  examples.py  paxioms.py  plots.py  postulates.py  raxioms.py  uci_adult_20240415.py
python/src/ntqr/r3/: __init__.py  evaluations.py  postulates.py  raxioms.py
python/tests/: test_algebra.py  test_datasketches.py  test_evaluations.py  test_evaluators.py  test_r2_axioms.py  test_r2_postulates.py  test_r3_axioms.py  test_statistics.py  test_testsketches.py
python/tests/r2/: test_datasketches.py  test_evaluations.py  test_evaluators.py  test_r2_alarms.py  test_r2_raxioms.py  test_r2evaluations.py
python/tests/r3/: test_r3_alarms.py
