[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ntqr"
authors = [{name = "Andrés Corrada-Emmanuel", 
            email = "andres.corrada@dataengines.com"}]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/andrescorrada/IntroductionToAlgebraicEvaluation"
