[build-system]
requires = ["flit_core >=3.12.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ntqr"
authors = [
    {name = "Andres Corrada-Emmanuel", email = "andres.corrada@dataengines.com"},
    {name = "Walker Lee", email = "walker.lee@dataengines.com"},
    {name = "Adam Sloat", email = "adam.sloat@dataengines.com"}]

dynamic = ["version"]
description = "Tools for the logic of evaluation using unlabeled data"
readme = "README.md"

dependencies = ["sympy>=1.13.2",
                "typing_extensions>=4.12.2",
                "matplotlib>=3.10.0"]

license = {file = "LICENSE.txt"}
keywords = ["evaluation", "algebra", "machine learning", "logic", "ai safety"]
classifiers = [
 "Development Status :: 3 - Alpha",
 "Framework :: Jupyter",
 "Intended Audience :: Information Technology",
 "Intended Audience :: Science/Research",
 "License :: OSI Approved :: MIT License",
 "Natural Language :: English",
 "Topic :: Scientific/Engineering",
 "Topic :: Scientific/Engineering :: Artificial Intelligence",
 "Topic :: Scientific/Engineering :: Mathematics"]


[project.urls]
Home = "https://github.com/andrescorrada/IntroductionToAlgebraicEvaluation/tree/main/python"
Documentation="https://ntqr.readthedocs.org/en/latest"

[project.optional-dependencies]
sphinx = [
    "sphinx>=8.2.3",
    "myst-parser>=4.0.0",
    "myst-nb>=1.2.0",
    "matplotlib>=3.10.0",
]
